# Blog-Generation-Agentic-AI-App

./: .gitignore  README.md  app.py  langgraph.json  main.py  pyproject.toml  requirements.txt  setup.py
frontend/static/: script.js
frontend/ui/: 404.html  chat.html  index.html  main.html
src/graphs/: graph_builder.py
src/llms/: groq_llm.py
src/nodes/: blog_node.py
src/states/: blog_state.py
